--- a/GitResources/src/resources/templates/404.html
+++ b/GitResources/src/resources/templates/404.html
@@ -98,6 +98,7 @@
 
 <body class="page_type_error error_404">
 <!-- :: 404.html -->
+<!-- :: Miguel.html -->
   <div class="table">
     <div class="table-cell">
       <span><span class="fas fa-road"></span></span>
